--- a/assets/css/_shared.scss
+++ b/assets/css/_shared.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 body {
-	font-size: 16px;
-	font-family: Raleway, Arial, sans-serif;
+    font-size: 16px;
+    font-family: Raleway, Arial, sans-serif;
 }
 
 @font-face {
@@ -15,78 +15,130 @@ body {
   font-style: normal;
 }
 
-.icono {
-	font-family: "SSPika";
-	font-style: normal;
-	font-weight: normal;
-	text-decoration: none;
-	text-rendering: optimizeLegibility;
-	white-space: nowrap;
-	-webkit-font-feature-settings: "liga";
-	-moz-font-feature-settings: "liga=1";
-	-moz-font-feature-settings: "liga";
-	-ms-font-feature-settings: "liga" 1;
-	-o-font-feature-settings: "liga";
-	font-feature-settings: "liga";
-	-webkit-font-smoothing: antialiased;
+@font-face {
+  font-family: "SSPikaSC";
+  src: url('/fonts/ss-social-circle.eot');
+  src: url('/fonts/ss-social-circle.eot?#iefix') format('embedded-opentype'),
+       url('/fonts/ss-social-circle.woff') format('woff'),
+       url('/fonts/ss-social-circle.ttf')  format('truetype'),
+       url('/fonts/ss-social-circle.svg#SSPika') format('svg');
+  font-weight: normal;
+  font-style: normal;
+
 }
 
+.icono {
+    font-family: "SSPika";
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: none;
+    text-rendering: optimizeLegibility;
+    white-space: nowrap;
+    -webkit-font-feature-settings: "liga";
+    -moz-font-feature-settings: "liga=1";
+    -moz-font-feature-settings: "liga";
+    -ms-font-feature-settings: "liga" 1;
+    -o-font-feature-settings: "liga";
+    font-feature-settings: "liga";
+    -webkit-font-smoothing: antialiased;
+}
+
+.social-icon {
+    font-family: "SSPikaSC";
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: none;
+    text-rendering: optimizeLegibility;
+    white-space: nowrap;
+    -webkit-font-feature-settings: "liga";
+    -moz-font-feature-settings: "liga=1";
+    -moz-font-feature-settings: "liga";
+    -ms-font-feature-settings: "liga" 1;
+    -o-font-feature-settings: "liga";
+    font-feature-settings: "liga";
+    -webkit-font-smoothing: antialiased;
+}
+
+
 h1, h2, h3 {
-	font-weight: bold;
+    font-weight: bold;
 }
 
 h1 {
-	color: #ED1E79;
-	font-size: 2.25em;
-	line-height: 1.5em;
-	font-weight: 900;
-	text-align: center;
+    color: $rosa;
+    font-size: 2.25em;
+    line-height: 1.5em;
+    font-weight: 900;
+    text-align: center;
+}
+
+h1 a {
+  color: $rosa;
+  text-decoration: none;
+}
+
+h1 img {
+  width: 100px;
+  display: block;
+  text-align: center;
+  margin: 10px auto 0 auto;
+  @include transform(scale(1));
+  @include transition(all .2s ease-in-out);
+}
+
+h1:hover img {
+  @include transform(scale(1.1));
+  @include transition(all .2s ease-in-out);
 }
 
 h2 {
-	font-size: 1.5em;
-	line-height: 1.2em;
+    font-size: 1.5em;
+    line-height: 1.2em;
 }
 
 p {
-	line-height: 1.2em;
+    line-height: 1.2em;
 }
 
 header {
-	text-align: center;
+    text-align: center;
+}
+
+#main-header {
+  margin-bottom: 1em;
 }
 
 footer {
-	text-align: center;
-	display: block;
+    text-align: center;
+    display: block;
 }
 
 #patito {
-	width: 45px;
-	display: block;
-	margin: 0 auto; 
+    width: 45px;
+    display: block;
+    margin: 0 auto; 
 }
 
 footer a {
-	color: #ED1E79;
+    color: #ED1E79;
 }
 
 footer a:hover {
-	background: #ED1E79;
-	color: #fff;
+    background: #ED1E79;
+    color: #fff;
 }
 
 
 .inside {
-	width: 100%;
-	max-width: 960px;
-	margin: 0 auto;
-	-webkit-transition: all .5s ease-in-out;
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    -webkit-transition: all .5s ease-in-out;
 }
 
 @media screen and (max-width: 960px) {
-	.inside {
-		-webkit-transition: all .5s ease-in-out;
-		width: 90%;
-	}
+    .inside {
+        -webkit-transition: all .5s ease-in-out;
+        width: 90%;
+    }
 }
