agregando cerrar detalles y smooth scrolling en ios

--- a/views/templates/detalles.erb
+++ b/views/templates/detalles.erb
@@ -1,4 +1,5 @@
 <article class="hoja detalles-actor" id="actor-{{id}}">
+	<a href="#" class="icono info-close">close</a>
 
 	<header>
 		<div class="headshot-container">
