--- a/assets/css/actores/detalles.scss
+++ b/assets/css/actores/detalles.scss
@@ -25,6 +25,17 @@
 	@include box-shadow(0px 3px 4px rgba(0,0,0,.5));
 }
 
+.info-close {
+	color: #666;
+	float: right;
+	margin-right: 20px;
+	font-size: 1.2em;
+
+	&:hover {
+		color: #333;
+	}
+}
+
 
 .actor-nombre {
 	color: #333;
