--- a/assets/css/portada.scss
+++ b/assets/css/portada.scss
@@ -42,7 +42,8 @@ body.covered {
 }
 
 #cover {
-	overflow: scroll;
+	overflow-y: scroll;
+	-webkit-overflow-scrolling: touch;
 	position: fixed;
 	width: 100%;
 	height: 100%;
