--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,6 +10,7 @@
 
 		<title>¿Quién me representa?</title>
 	
+		<!-- open graph -->
 		<meta property="og:description" content="Encuentra a tu diputado, senador y asambleista." />
 		<meta property="og:title" content="¿Quién me representa?" />
 		<meta property="fb:admins" content="792675081" />
@@ -18,7 +19,14 @@
 		<meta itemprop="name" content="Ubica a tu legislador y dile lo que piensas. Su trabajo es representar tus intereses en la creación de leyes." />
 		<meta itemprop="description" content="Ubica a tu legislador y dile lo que piensas. Su trabajo es representar tus intereses en la creación de leyes." />
 		<meta itemprop="image" content="http://representantes.pati.to/img/og-icon.png" />
-		
+		<meta name="twitter:card" content="summary">
+		<meta name="twitter:site" content="@peeseeme">
+		<meta name="twitter:title" content="¿Quién me representa?">
+		<meta name="twitter:description" content="Encuentra a tu diputado, senador y asambleista.">
+		<meta name="twitter:creator" content="@peeseeme">
+		<meta name="twitter:image:src" content="http://representantes.pati.to/img/og-icon.png">
+		<meta name="twitter:domain" content="http://representantes.pati.to">
+
 
 		<!-- iOS webapp icons -->
 		<link rel="apple-touch-icon" href="/img/ios/icon.png" />
@@ -65,6 +73,12 @@
 						</a>
 					</h1>
 					<p>Ubica a tu legislador y dile lo que piensas. Su trabajo es representar tus intereses en la creación de leyes.</p>
+
+					<nav id="social">
+						<a class="icono social-icon facebook" href="http://www.facebook.com/sharer/sharer.php?u=http://representantes.pati.to" target="_blank">facebook</a>
+						<a class="icono social-icon twitter" href="http://twitter.com/home?status=http://representantes.pati.to me dijo quién me representa en el congreso. via @peeseeme" target="_blank">twitter</a>
+					</nav>
+
 				</header>
 
 				<main>
