haciendo más bonito el pedo de tuiter

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -76,7 +76,7 @@
 
 					<nav id="social">
 						<a class="icono social-icon facebook" href="http://www.facebook.com/sharer/sharer.php?u=http://representantes.pati.to" target="_blank">facebook</a>
-						<a class="icono social-icon twitter" href="http://twitter.com/home?status=http://representantes.pati.to me dijo quién me representa en el congreso. via @peeseeme" target="_blank">twitter</a>
+						<a class="icono social-icon twitter" href="http://twitter.com/share?url=http%3A%2F%2Frepresentantes.pati.to&via=peeseeme&text=Ya se quien me representa en el congreso" target="_blank">twitter</a>
 					</nav>
 
 				</header>
