--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,17 +14,17 @@
 		<meta property="og:description" content="Encuentra a tu diputado, senador y asambleista." />
 		<meta property="og:title" content="¿Quién me representa?" />
 		<meta property="fb:admins" content="792675081" />
-		<meta property="og:image" content="http://representantes.pati.to/img/og-icon.png" />
+		<meta property="og:image" content="http://representantes.pati.to/img/share-icon.png" />
 		<meta property="og:url" content="http://representantes.pati.to" />
 		<meta itemprop="name" content="Ubica a tu legislador y dile lo que piensas. Su trabajo es representar tus intereses en la creación de leyes." />
 		<meta itemprop="description" content="Ubica a tu legislador y dile lo que piensas. Su trabajo es representar tus intereses en la creación de leyes." />
-		<meta itemprop="image" content="http://representantes.pati.to/img/og-icon.png" />
+		<meta itemprop="image" content="http://representantes.pati.to/img/share-icon.png" />
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:site" content="@peeseeme">
 		<meta name="twitter:title" content="¿Quién me representa?">
 		<meta name="twitter:description" content="Encuentra a tu diputado, senador y asambleista.">
 		<meta name="twitter:creator" content="@peeseeme">
-		<meta name="twitter:image:src" content="http://representantes.pati.to/img/og-icon.png">
+		<meta name="twitter:image:src" content="http://representantes.pati.to/img/share-icon.png">
 		<meta name="twitter:domain" content="http://representantes.pati.to">
 
 
