--- a/views/layout.erb
+++ b/views/layout.erb
@@ -72,11 +72,11 @@
 							¿Quién me representa?
 						</a>
 					</h1>
-					<p>Ubica a tu legislador y dile lo que piensas. Su trabajo es representar tus intereses en la creación de leyes.</p>
 
 					<nav id="social">
 						<a class="icono social-icon facebook" href="http://www.facebook.com/sharer/sharer.php?u=http://representantes.pati.to" target="_blank">facebook</a>
 						<a class="icono social-icon twitter" href="http://twitter.com/share?url=http%3A%2F%2Frepresentantes.pati.to&via=peeseeme&text=Ya se quien me representa en el congreso" target="_blank">twitter</a>
+						<a class="icono round" href="/busqueda">search</a>
 					</nav>
 
 				</header>
