--- a/views/portada.erb
+++ b/views/portada.erb
@@ -14,6 +14,7 @@ window.request_data = <%= request_data.to_json; %>;
 <% end %>
 
 <div id="mapa" class="loading">
+	<div id="instrucciones-mapa">Ubica tu domicilio en el mapa y presiona el botón para encontrar a tus representantes.</div>
 
 	<div id="mapa-loading">Buscándote...</div>
 	<div id="mapa-canvas"></div>
