--- a/assets/css/_mapa.scss
+++ b/assets/css/_mapa.scss
@@ -7,6 +7,29 @@
 	position: relative;
 }
 
+#instrucciones-mapa {
+	position: absolute;
+	font-weight: bold;
+	padding: 1em .5em;
+	top: 0px;
+	margin: 0 auto;
+	left:0;
+	right: 0;
+	max-width: 80%;
+	top: 40%;
+	@include border-radius(5px);
+	background-color: rgba(255,255,255,.8);
+	text-align: center;
+	z-index: 1010;
+	opacity: 1;
+	@include transition(opacity .5s ease-in);
+}
+
+.loading #instrucciones-mapa {
+	opacity: 0;
+	@include transition(opacity .5s ease-in);
+}
+
 #mapa-loading {
 	color: rgb(209, 207, 203);
 	text-shadow: -1px -1px 2px rgba(255,255,255,.5);
@@ -95,6 +118,8 @@
 .icono.loading {
 	display: inline-block;
 	vertical-align: middle;
-	@include transform-origin(50% 41%);
+	position: relative;
+	bottom: 3px;
+	@include transform-origin(49% 43.5%);
 	@include animation(spin 1s linear infinite forwards);
 }
