--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,6 +14,7 @@
 		<meta property="og:description" content="Encuentra a tu diputado, senador y asambleista." />
 		<meta property="og:title" content="¿Quién me representa?" />
 		<meta property="fb:admins" content="792675081" />
+		<meta property="fb:app_id" content="<%= $settings.facebook[:app_id] %>" />
 		<meta property="og:image" content="http://representantes.pati.to/img/share-icon.png" />
 		<meta property="og:url" content="http://representantes.pati.to" />
 		<meta itemprop="name" content="Ubica a tu legislador y dile lo que piensas. Su trabajo es representar tus intereses en la creación de leyes." />
